src/css/blocks.css
@import "components.css";

.skip-content {
  text-decoration: underline;
  position: absolute;
  z-index: 30;
  padding: 1rem;
  background-color: white;
  border: 1px solid #404040;
  bottom: calc(100% + 1rem);
  left: 0;
}

.skip-content:focus {
  bottom: auto;
}

header {
  position: fixed;
  background: var(--gray-12);
  top: 0;
  width: 100%;
}

.sidebar-position {
  z-index: -1;
  position: absolute;
  top: 100%;
  /* 100% is header height. Which can change depending on viewport width */
  bottom: calc(100% - 100vh);
  right: 0;
  --block-padding: var(--space-2xs);
  margin-block: var(--block-padding);
  --sidebar-x: 100%;
  transform: translateX(var(--sidebar-x));
  transition: visibility .15s, opacity .15s, transform .15s;
  transition-timing-function: var(--ease-in-out-1);
  max-width: 20rem;
  width: 100%;
}

.menu-item[aria-expanded=false] + .sidebar-position,
#game_name[aria-expanded=false] ~ .sidebar-position {
  opacity: 0;
  visibility: hidden;
  --sidebar-x: 100%;
}

.menu-item[aria-expanded=true] + .sidebar-position,
#game_name[aria-expanded=true] ~ .sidebar-position {
  opacity: 1;
  visibility: visible;
  --sidebar-x: 0%;
}

.sidebar-content {
  --sidebar-bg: var(--fg);
  font-size: var(--step-0);
  display: flex;
  flex-direction: column;
  height: 100%;
  background-color: var(--sidebar-bg);
  position: relative;
}

/* TODO: redo form[role=search] CSS */
form[role="search"] {
  font-size: var(--step--1);
  display: flex;
  height: 100%;
  flex-grow: 1;
  justify-content: end;
}

form[role="search"] input {
  --border-color: var(--gray-8);
  border: none;
  background-color: var(--gray-2);
  border-top: 1px solid var(--border-color);
  border-bottom: var(--space-3xs) solid var(--border-color);
  padding-inline: var(--space-2xs);
  flex: 1 1 auto;
  min-width: 6rem;
  width: 0;
  max-width: 14rem;
}

form[role=search] input[aria-expanded=true],
form[role=search] input[aria-expanded=true] + .menu-item {
  border-bottom-color: var(--violet-8);
}

form[role=search] input[aria-expanded=false] ~ sidebar-menu {
  display: none;
}

form[role="search"]:is(:hover, :focus-within) :is(.menu-item, input) {
  --border-color: var(--stone-7);
}

main {
  padding-top: calc(var(--header-height) + var(--space-m));
}

.card-live {
  line-height: 1.1;
  display: flex;
  font-size: var(--step--2);
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  color: var(--gray-4);
  opacity: .9;
  padding-inline: var(--space-2xs);
  padding-bottom: 2px;
}

.card-live span {
  padding-inline: 3px;
  background-color: var(--red-12);
  border-radius: var(--radius-1);
}

.card-live p {
  margin-left: var(--space-3xs);
  text-overflow: ellipsis;
  overflow: hidden;
  font-style: italic;
}

.main-heading {
  font-weight: var(--font-weight-3);
  background: white;
  display: inline-block;
  padding: var(--space-3xs) var(--space-2xs);
  font-size: var(--heading-size);
}

main h3 {
  font-weight: var(--font-weight-3);
  font-size: var(--step-2);
}

